--- a/Project-4-menu with video background/style.css
+++ b/Project-4-menu with video background/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Courier New", Courier, monospace;
+  font-family: 'Courier New', Courier, monospace;
 }
 .container {
   display: flex;
@@ -23,9 +23,9 @@
 .glass {
   width: 90%;
   height: 85%;
-  z-index: 1;
-  border-radius: 25px;
   border: 2px solid rgba(228, 202, 3, 0.2);
+  z-index: 1;
+  border-radius: 30px;
 }
 .navigation {
   display: flex;
@@ -42,9 +42,8 @@
 }
 .title span {
   display: inline;
-  color: rgb(255, 255, 255);
+  color: white;
   font-size: 60px;
-  background: linear-gradient();
 }
 .navigation ul {
   display: flex;
@@ -54,17 +53,17 @@
   position: relative;
   list-style: none;
   margin: 0 10px;
-  padding: 5px 10px;
+  color: transparent;
   font-size: 24px;
   font-weight: 800;
+  padding: 5px 10px;
   text-transform: uppercase;
-  color: transparent;
   cursor: pointer;
   animation: show 2s linear forwards;
   animation-delay: 2.5s;
 }
-@keyframes show {
-  30%,100% {
+@keyframes show{
+  30%,100%{
     color: white;
   }
 }
@@ -72,14 +71,14 @@
   position: absolute;
   content: attr(text);
   top: 0;
-  padding: 5px 10px;
   left: 0;
   width: 100%;
   height: 0%;
-  font-size: 24px;
+  padding: 5px 10px;
   font-weight: 800;
-  overflow: hidden;
+  font-size: 24px;
   color: var(--c);
+  overflow: hidden;
   transition: 0.5s;
 }
 .navigation ul li:hover::before {
@@ -96,54 +95,54 @@
   border-top: 3px solid var(--c);
   border-bottom: 0px solid var(--c);
   animation: down 2s linear forwards;
-  animation-delay: 1s;
+  animation-delay:1s ;
 }
 @keyframes down{
   50%{
-    top:30px
+    top: 30px;
   }
 }
 .navigation ul li:hover::after {
   border-bottom: 3px solid var(--c);
   height: 80%;
 }
-.intro {
+.intro{
   display: flex;
   justify-content: center;
   align-items: center;
   height: inherit;
   flex-direction: column;
 }
-.intro h2 {
+.intro h2{
   color: white;
   font-size: 3rem;
 }
-.intro h2 span {
+.intro h2 span{
   color: rgb(228, 202, 3);
   font-size: 6rem;
   animation: text 1s linear infinite;
 }
-@keyframes text {
-  50% {
+@keyframes text{
+  50%{
     color: transparent;
   }
 }
-.intro p {
+.intro p{
   max-width: 600px;
   text-align: center;
   color: white;
 }
-.btn {
+.btn{
   background: transparent;
   color: rgb(228, 202, 3);
   border: 2px solid rgb(228, 202, 3);
-  padding: 10px 20px;
+  padding: 10px 20px ;
   font-size: 24px;
   font-weight: 600;
   border-radius: 30px;
   margin-top: 30px;
   cursor: pointer;
 }
-.btn:hover {
-  color: rgb(164, 145, 0);
+.btn:hover{
+  color: rgb(164,145,0);
 }
