--- a/Project-5-Website With Auto Typing Text Effect/style.css
+++ b/Project-5-Website With Auto Typing Text Effect/style.css
@@ -2,18 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
-  list-style: none;
-  text-decoration: none;
   font-family: "Courier New", Courier, monospace;
+  overflow: hidden;
 }
 .header {
   width: 100vw;
   min-height: 100vh;
-  background: #0000008a;
-  color: #fff;
+  color: white;
   padding: 0 50px;
   position: relative;
+  background: #0000008a;
 }
 nav {
   display: flex;
@@ -44,28 +42,28 @@ nav ul li {
   padding: 10px 30px;
 }
 nav ul li a {
-  color: white;
-  letter-spacing: 1px;
+  text-decoration: none;
+  list-style: none;
   font-size: 22px;
+  color: white;
   text-transform: uppercase;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  letter-spacing: 1px;
   transition: 0.2s;
 }
 nav ul li a:hover {
   color: #fff724;
-  text-shadow: 1px 1px 0px  #5d5a02,
-               3px 3px 0px  #5d5a02,
-               5px 5px 0px  black,
-               7px 7px 0px  black;
+  text-shadow: 1px 1px 0 #5d5a02, 3px 3px 0 #5d5a02, 5px 5px 0 black,
+    7px 7px 0 black;
 }
-.background {
+.background{
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
   object-fit: cover;
 }
-.text-box {
+.text-box{
   width: 60%;
   margin-top: 12%;
   margin-left: 10%;
@@ -73,17 +71,17 @@ nav ul li a:hover {
   letter-spacing: 1px;
   line-height: 26px;
 }
-.auto-text {
+.auto-text{
   display: flex;
   height: 165px;
   position: relative;
 }
-.auto-text h1 {
-  line-height: 160px;
+.auto-text h1{
+  line-height: 165px;
   font-size: 75px;
   border: 2px solid transparent;
 }
-.auto-text div {
+.auto-text div{
   display: inline-flex;
   flex-direction: column;
   line-height: 160px;
@@ -92,123 +90,114 @@ nav ul li a:hover {
   left: 170px;
   animation: updown-text 15s linear infinite;
 }
-@keyframes updown-text {
-  0%,
-  33% {
+@keyframes updown-text{
+  0%,33%{
     top: 0;
   }
-  33.01%,
-  66% {
-    top: -164px;
+  33.01%,66%{
+    top: -165px;
   }
-  66.01%,
-  100% {
+  66.01%,100%{
     top: -328px;
   }
 }
-.auto-text div span {
+.auto-text div span{
   color: transparent;
   border: 2px solid transparent;
   -webkit-text-stroke: 0.2vw transparent;
   position: relative;
-  padding: 0 15px;
+  padding:0 15px ;
   font-weight: 800;
 }
-.auto-text div span:nth-child(1) {
+.auto-text div span:nth-child(1){
   width: 345px;
 }
-.auto-text div span:nth-child(2) {
+.auto-text div span:nth-child(2){
   width: 580px;
 }
-.auto-text div span:nth-child(3) {
+.auto-text div span:nth-child(3){
   width: 480px;
 }
-.auto-text div span::before {
+.auto-text div span::before{
   content: attr(data-text);
   position: absolute;
   left: -5px;
   width: 0%;
   height: 100%;
-  padding-left: 5px;
-  -webkit-text-stroke: 0vw rgb(255, 0, 0);
+  -webkit-text-stroke:  0vw rgba(255 ,0 ,0);
   color: #fff724;
+  padding-left: 5px;
   overflow: hidden;
   letter-spacing: 1px;
   animation: show-text 5s linear infinite;
 }
-@keyframes show-text {
-  0%,
-  10%,
-  95%,
-  100% {
+@keyframes show-text{
+  0%,10%,95%,100%{
     width: 0%;
   }
-  65%,
-  80% {
-    width: 100%;
-  }
-}
-.auto-text div span::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: -10%;
-  height: 60%;
-  border-right: 5px solid #fff724;
-  animation: border 5s linear infinite;
-}
-@keyframes border {
-  0%,
-  10%,
-  95%,
-  100% {
-    width: 0%;
-  }
-  65%,
-  80% {
+  65%,80%{
     width: 99%;
   }
 }
-.btn {
+.auto-text div span::after{
+  content: '';
+  position: absolute;
+  left: 0%;
+  width: -10%;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 60%;
+  border-right: 5px solid #fff724;
+  animation: border 5s linear infinite;
+
+}
+@keyframes border{
+  0%,10%,95%,100%{
+    width: 0%;
+  }
+  65%,80%{
+    width: 99%;
+  }
+}
+.btn{
+  position: relative;
   margin-top: 30px;
   display: inline-block;
   border-radius: 10px;
-  color: #fff724;
-  padding: 10px 30px;
+  text-decoration: none;
+  padding: 10px 30px ;
+  border: 2px solid #fff724 ;
   font-weight: 600;
   transition: 0.5s;
-  border: 2px solid #fff724;
 }
-.btn1 {
-  position: relative;
+.btn1{
   background: transparent;
+  color: #fff724;
 }
-.btn1:hover {
+.btn1:hover{
   background: #fff724;
   color: black;
 }
-.btn2 {
+.btn2{
   background: #fff724;
-  color: #000;
-  margin-left: 30px;
+  color: black;
 }
-.btn2:hover {
+.btn2:hover{
   background: transparent;
   color: #fff724;
 }
-.image-container {
+
+.image-container{
   position: absolute;
   right: 10%;
   bottom: 20%;
   height: 350px;
   width: 350px;
   padding-top: 20px;
-  border-radius: 50%;
   border: 2px solid #fff724;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  box-shadow: 15px 15px 20px #fff824c6;
+  box-shadow:  15px 15px 20px #fff824c6;
 }
