--- a/Project-6-text-transition/style.css
+++ b/Project-6-text-transition/style.css
@@ -2,9 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-.hero-section {
+.section {
   width: 100vw;
   height: 100vh;
   background-image: url(bg.jpg);
@@ -16,15 +18,14 @@ nav {
   display: flex;
   width: 100%;
   align-items: center;
-  background: linear-gradient(to left ,black,crimson) ;
   padding: 10px 5%;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.176);
+  background: linear-gradient(to left, black, crimson);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.18);
 }
-.title{
+.title {
   color: white;
   font-size: 2.5rem;
 }
-
 nav ul {
   flex: 2;
   text-align: right;
@@ -34,12 +35,11 @@ nav ul li {
   margin: 10px 30px;
 }
 nav ul li a {
-  text-decoration: none;
   letter-spacing: 1px;
   font-size: 25px;
-  font-weight: 600;
   text-transform: uppercase;
-  color:white;
+  font-weight: 600;
+  color: white;
   transition: 0.5s;
 }
 nav ul li a:hover {
@@ -52,22 +52,22 @@ nav ul li a:hover {
   justify-content: space-around;
   align-items: flex-end;
   flex-direction: column;
-  padding: 5px  0;
+  padding: 5px 0;
   position: relative;
   cursor: pointer;
 }
 .menu span {
   height: 3px;
   background: white;
+  width: 20px;
   border-radius: 5px;
-  width: 20px ;
 }
 .menu span:nth-child(2) {
   width: 40px;
 }
 .menu span:nth-child(3) {
   width: 10px;
-}  
+}
 .container {
   width: 100%;
   height: 80vh;
@@ -75,16 +75,16 @@ nav ul li a:hover {
   align-items: center;
   padding: 0 20%;
   justify-content: flex-start;
-  margin:10px auto;
+  margin: 0 auto;
 }
 h1 {
   display: block;
   width: fit-content;
   font-size: 4rem;
-  position: relative;
   color: transparent;
   pointer-events: none;
-  animation: text_reveal 0.5s ease forwards;
+  position: relative;
+  animation: text-reveal 0.5s ease forwards;
   animation-delay: 1s;
 }
 h1:nth-child(1) {
@@ -94,29 +94,29 @@ h1:nth-child(2) {
   animation-delay: 2s;
 }
 h1:nth-child(3) {
-  animation: text_reveal_3 0.5s ease forwards;
-  animation-delay: 3s; 
+  animation: text-reveal-2 0.5s ease forwards;
+  animation-delay: 3s;
 }
-@keyframes text_reveal {
+@keyframes text-reveal {
   100% {
     color: white;
   }
 }
-@keyframes text_reveal_3 {
+@keyframes text-reveal-2 {
   100% {
     color: crimson;
   }
-} 
+}
 h1 span {
   position: absolute;
   left: 0;
   width: 0%;
   height: 100%;
   background-color: crimson;
-  animation: text_reveal_box 1s ease;
+  animation: text-reveal-box 1s ease;
   animation-delay: 0.5s;
 }
-h1:nth-child(1) span {
+h1:nth-child(1)span {
   animation-delay: 0.5s;
 }
 h1:nth-child(2) span {
@@ -125,7 +125,7 @@ h1:nth-child(2) span {
 h1:nth-child(3) span {
   animation-delay: 2.5s;
 }
-@keyframes text_reveal_box {
+@keyframes text-reveal-box {
   50% {
     width: 100%;
     left: 0;
@@ -135,31 +135,30 @@ h1:nth-child(3) span {
     left: 100%;
   }
 }
-
-.cta {
+.btn {
   position: relative;
   display: inline-block;
   padding: 10px 30px;
   color: white;
-  background-color: transparent;
+  background: transparent;
   border: 2px solid crimson;
   font-size: 2rem;
-  text-transform: uppercase;
   letter-spacing: 0.1rem;
+  text-transform: uppercase;
   margin-top: 30px;
-  z-index: 1;
-  opacity: 0;
-  animation: cta 1s linear forwards;
-  animation-delay: 3.5s;
   height: 60px;
   width: 240px;
+  z-index: 1;
+  opacity: 0;
+  animation: btn 1s linear forwards;
+  animation-delay: 3.5s;
 }
-@keyframes cta {
+@keyframes btn {
   100% {
     opacity: 1;
   }
 }
-.cta::before {
+.btn::before {
   content: "";
   position: absolute;
   left: 0;
@@ -172,13 +171,12 @@ h1:nth-child(3) span {
   transition: width 0.5s, height 0.5s;
   transition-delay: 0.5s, 0s;
 }
-.cta:hover::before {
+.btn:hover::before {
   height: 100%;
   width: 50%;
   transition-delay: 0s, 0.5s;
 }
-
-.cta::after {
+.btn::after {
   content: "";
   position: absolute;
   right: 0;
@@ -191,7 +189,7 @@ h1:nth-child(3) span {
   transition: width 0.5s, height 0.5s;
   transition-delay: 0.5s, 0s;
 }
-.cta:hover::after {
+.btn:hover::after {
   height: 100%;
   width: 50%;
   transition-delay: 0s, 0.5s;
